fix username overflow problems

--- a/src/components/message-pane/message-item/styles.module.scss
+++ b/src/components/message-pane/message-item/styles.module.scss
@@ -7,6 +7,11 @@
   }
 }
 
+.username {
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
 .floatOptions {
   display: flex;
   align-items: center;
